Update Linear Regression with Python.ipynb

--- a/Linear Regression with Python.ipynb
+++ b/Linear Regression with Python.ipynb
@@ -593,13 +593,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "R-Square: 0.9890046246741234\n",
       "MAE: 7.228148653430823\n",
       "MSE: 79.81305165097443\n",
       "RMSE: 8.933815066978633\n"
@@ -608,7 +609,9 @@
    ],
    "source": [
     "from sklearn import metrics\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
+    "print(\"R-Square:\", r2_score(y_test, predictions))\n",
     "print('MAE:', metrics.mean_absolute_error(y_test, predictions))\n",
     "print('MSE:', metrics.mean_squared_error(y_test, predictions))\n",
     "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_test, predictions)))"
